k8s/simple-web/overlays/world1l/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web
  annotations:
    # web -> https://simple-web.world1l.worldl.xpt/,
    # websecure -> https://simple-web.world1l.worldl.xpt/
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: spnw-intermediate-ca1-issuer
    cert-manager.io/common-name: "simple-web.world1l.worldl.xpt"
spec:
  ingressClassName: traefik
  rules:
    - host: simple-web.world1l.worldl.xpt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-web
                port:
                  number: 80
    - host: worldl-simple-web.worldb.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-web
                port:
                  number: 80
  tls:
    - hosts:
        - simple-web.world1l.worldl.xpt
      secretName: simple-web-cert-secret
